<resources>
    <string name="app_name">ShopScan</string>
    <string name="userName">Nombre de usuario:</string>
    <string name="pwd">Contraseña:</string>
    <string name="epwd">Contraseña.......</string>
    <string name="iuserName">Nombre de usuario.......</string>
    <string name="todo">todo</string>
    <string name="dni">DNI:</string>
    <string name="idni">DNI.......</string>
    <string name="tlf">Telefono:</string>
    <string name="etlf">Telefono.......</string>
    <string name="nombre">Nombre:</string>
    <string name="eNombre">Introduzca su nombre.......</string>
    <string name="apellido">Apellido:</string>
    <string name="eApellido">Introduzca el primer apellido.......</string>
    <string name="mail">Email:</string>
    <string name="eMail">Introduzca email.......</string>
    <string name="direccion">Dirección:</string>
    <string name="eDir">Introduzca dirección.......</string>
    <string name="abrir_drawer">Abrir Navigation Drawer</string>
    <string name="cerrar_drawer">Cerrar Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Catalogo">Catálogo</string>
    <string name="nproducto">NProducto</string>
    <string name="precioP">Precio:</string>
    <string name="reservar">Reservar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fechaV">Fecha:</string>
    <string name="codigoV">Codigo Venta:</string>
</resources>