<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddCliente">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/registro" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/DP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:text="@string/dni"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/eDni"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eDni"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/idni"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:text="@string/tlf"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/etlf"
            app:layout_constraintTop_toBottomOf="@+id/eDni" />

        <EditText
            android:id="@+id/etlf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/etlf"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:text="@string/nombre"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/etlf"
            app:layout_constraintTop_toBottomOf="@+id/etlf" />

        <EditText
            android:id="@+id/eName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/eNombre"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:text="@string/apellido"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/eName"
            app:layout_constraintTop_toBottomOf="@+id/eName" />

        <EditText
            android:id="@+id/eApellido"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/eApellido"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="RtlSymmetry" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    PARA CAMBIAR EN FLOATTING EL ICONO A BLANCO
       android:src="@drawable/login"
       android:tint="@color/white"
       android:tintMode="screen" || "add" -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credenciales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:text="@string/mail"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/eMail"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/eMail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:text="@string/direccion"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/eMail"
            app:layout_constraintTop_toBottomOf="@+id/eMail" />

        <EditText
            android:id="@+id/eDir"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/eDir"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:text="@string/userName"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/eDir"
            app:layout_constraintTop_toBottomOf="@+id/eDir" />

        <EditText
            android:id="@+id/eUser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/iuserName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:text="@string/pwd"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/eUser"
            app:layout_constraintTop_toBottomOf="@+id/eUser" />

        <EditText
            android:id="@+id/epwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/epwd"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:src="@drawable/registrar"
        android:tint="@color/white"
        android:tintMode="screen"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DP"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="59dp"
        android:src="@drawable/f_izquierda"
        app:layout_constraintEnd_toStartOf="@+id/registrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DP" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="59dp"
        android:src="@drawable/f_derecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registrar"
        app:layout_constraintTop_toBottomOf="@+id/DP" />
</androidx.constraintlayout.widget.ConstraintLayout>