<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/acceso" />


    <!--    PARA CAMBIAR EN FLOATTING EL ICONO A BLANCO
        android:src="@drawable/login"
        android:tint="@color/white"
        android:tintMode="screen" || "add" -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/pwd"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="@+id/epwd"
            app:layout_constraintTop_toBottomOf="@+id/eUsuario" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userName"
            android:textColor="#000000"
            android:textSize="20sp"
            android:contentDescription="@string/todo"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/eUsuario"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eUsuario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/iuserName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/epwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bordes_redondeados"
            android:hint="@string/epwd"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/login"
        android:tint="@color/white"
        android:tintMode="screen"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/todo"
        android:focusable="true" />

    <ImageView
        android:id="@+id/singUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/singup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>